# ModernCpp

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Default_Arguments.cpp  LICENSE  README.md  array.cpp  conanfile.txt  lambda.cpp  member_point.cpp  noexcept.cpp  user_defined_literals.cpp  vcpkg.json
.github/workflows/: autoformat.yml  ci.yml
Basics/: compound_types.cpp  fundamental_types.cpp  fundamental_types.md
Basics/md/: compound_types.md  fundamental_types.md
Containers/: containers.cpp
Containers/md/: containers.md
Ranges/md/: ranges.md
cmake/: CompilerSanitizers.cmake  CompilerWarnings.cmake  Dependencies.cmake  ModuleHelpers.cmake  RunClangFormat.cmake  RunClangTidy.cmake
conan/profiles/: linux-clang  linux-gcc  macos-clang  mingw-clang64  mingw-ucrt64  msvc
docs/: ci-guide.md  clang-format-config-guide.md  clang-tidy-config-guide.md  clangd-config-guide.md  clangd-toolchain-overview.md  cmake-presets-guide.md  conan-guide.md  cpp-compilation-abi-guide.md  vcpkg-guide.md
en-US/: 现代C++基础 - 基础复习与扩展.md  现代C++基础 - 容器，ranges与算法 - Part1.md  现代C++基础 - 容器，ranges与算法 - Part2.md  现代C++基础 - 模板基础与移动语义.md  现代C++基础 - 流与字符串.md  现代C++基础 - 生命周期与类型安全.md  现代C++基础 - 补充与总结.md  现代C++基础 - 错误处理.md
modules/01_basics/: CMakeLists.txt  README.md
modules/01_basics/demos/: attributes.cpp  auto_deduction.cpp  bit_ops.cpp  control_flow.cpp  enum_scoped.cpp  floating_point.cpp  integer_safety.cpp  lambdas.cpp  literals_and_init.cpp  polymorphism.cpp  spaceship.cpp
modules/01_basics/docs/: zh-CN.md
modules/01_basics/tests/: test_basics.cpp  test_enum.cpp  test_floating_point.cpp  test_lambda.cpp  test_polymorphism.cpp  test_spaceship.cpp
modules/02_lifetime_type_safety/: CMakeLists.txt  README.md
modules/02_lifetime_type_safety/demos/: any_demo.cpp  byte_storage.cpp  casts_overview.cpp  dangling_pitfalls.cpp  dynamic_cast_rtti.cpp  lifetime_extension.cpp  mixin_pattern.cpp  multiple_inheritance.cpp  placement_new.cpp  slicing.cpp  storage_duration.cpp  storage_reuse.cpp  variant_visit.cpp  virtual_inheritance.cpp
modules/02_lifetime_type_safety/tests/: test_aliasing.cpp  test_any.cpp  test_casts.cpp  test_dynamic_cast.cpp  test_inheritance.cpp  test_lifetime.cpp  test_lifetime_extension.cpp  test_placement_new.cpp  test_slicing.cpp  test_storage_reuse.cpp  test_variant.cpp
modules/03_multi_file/: CMakeLists.txt  README.md
modules/03_multi_file/demos/: c_api_impl.cpp  explicit_instantiation.cpp  extern_c_demo.cpp  forward_a.cpp  forward_b.cpp  forward_decl.cpp  inline_var.cpp  inline_var_user.cpp  linkage_demo.cpp  linkage_internal.cpp  namespaces.cpp  odr_basics.cpp  odr_helper.cpp  preprocessor_demo.cpp  singleton_demo.cpp  tmpl_impl.cpp
modules/03_multi_file/docs/: en-US.md  zh-CN.md
modules/03_multi_file/include/: c_api.h  forward_a.h  forward_b.h  inline_config.h  (+4 more)
modules/04_streams_strings/: CMakeLists.txt  README.md
modules/04_streams_strings/demos/: charconv_demo.cpp  format_basics.cpp  format_ranges.cpp  fstream_demo.cpp  io_manipulators.cpp  osyncstream_demo.cpp  print_demo.cpp  regex_demo.cpp  spanstream_demo.cpp  stream_basics.cpp  stream_buffer.cpp  string_basics.cpp  string_view_demo.cpp  stringstream_demo.cpp  user_defined_format.cpp  user_defined_literals.cpp
modules/04_streams_strings/docs/: zh-CN.md
modules/04_streams_strings/tests/: test_charconv.cpp  test_format.cpp  test_format_ranges.cpp  test_fstream.cpp  test_print.cpp  test_regex.cpp  test_stream.cpp  test_string.cpp  test_string_view.cpp  test_stringstream.cpp  test_user_format.cpp
modules/05_containers_ranges_p1/: CMakeLists.txt  README.md
modules/06_containers_ranges_p2/: CMakeLists.txt  README.md
modules/07_value_categories/: CMakeLists.txt  README.md
modules/08_templates_basics/: CMakeLists.txt  README.md
modules/09_templates_advanced/: CMakeLists.txt  README.md
modules/10_memory/: CMakeLists.txt  README.md
modules/10_memory/demos/: alignment_demo.cpp  allocator_basics.cpp  false_sharing_demo.cpp  new_delete.cpp  object_layout.cpp  pimpl_demo.cpp  pmr_demo.cpp  shared_ptr_demo.cpp  smart_ptr_adaptors.cpp  unique_ptr_demo.cpp  weak_ptr_demo.cpp
modules/10_memory/docs/: en-US.md  zh-CN.md
modules/10_memory/tests/: test_alignment.cpp  test_allocator.cpp  test_layout.cpp  test_new_delete.cpp  test_pmr.cpp  test_shared_ptr.cpp  test_unique_ptr.cpp  test_weak_ptr.cpp
modules/11_error_handling/: CMakeLists.txt  README.md
modules/12_threading/: CMakeLists.txt  README.md
modules/12_threading/demos/: condition_variable_demo.cpp  future_promise_demo.cpp  jthread_basics.cpp  latch_barrier_demo.cpp  mutex_lock_demo.cpp  semaphore_demo.cpp  shared_mutex_demo.cpp  stop_token_demo.cpp  thread_basics.cpp
modules/12_threading/docs/: en-US.md
modules/12_threading/tests/: test_condition_variable.cpp  test_future_promise.cpp  test_jthread.cpp  test_latch_barrier.cpp  test_mutex.cpp  test_semaphore.cpp  test_stop_token.cpp  test_thread.cpp
modules/13_concurrency_advanced/: CMakeLists.txt  README.md
modules/13_concurrency_advanced/demos/: atomic_flag_spinlock.cpp  atomic_operations.cpp  atomic_ref_demo.cpp  coroutine_basics.cpp  fence_demo.cpp  memory_order_acq_rel.cpp  memory_order_relaxed.cpp  memory_order_seq_cst.cpp
modules/13_concurrency_advanced/docs/: en-US.md  zh-CN.md
modules/13_concurrency_advanced/tests/: test_atomic_basic.cpp  test_atomic_flag.cpp  test_atomic_ref.cpp  test_coroutine.cpp  test_fence.cpp  test_memory_order.cpp
modules/14_move_semantics_basics/: CMakeLists.txt  README.md
modules/15_summary/: CMakeLists.txt  README.md
test/: FunctionRegistry.h  t1.cpp  t1.h  t2.cpp  t2.h  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test7.cpp  test8.cpp  test9.cpp
triplets/: clang64-toolchain.cmake  x64-mingw-clang-dynamic.cmake
zh-CN/: 现代C++基础 - Move Semantics Basics.md  现代C++基础 - 多线程（新）.md  现代C++基础 - 容器，ranges与算法 - Part1.md  现代C++基础 - 模板基础与移动语义.md  现代C++基础 - 生命周期与类型安全.md  现代C++基础 - 补充与总结.md
(+170 files in other folders)
